; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/efidev/extr_efirt.c_efi_uninit.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/efidev/extr_efirt.c_efi_uninit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@efi_runtime = common dso_local global i32* null, align 8
@efi_shutdown_tag = common dso_local global i32* null, align 8
@shutdown_final = common dso_local global i32 0, align 4
@efi_systbl = common dso_local global i32* null, align 8
@efi_cfgtbl = common dso_local global i32* null, align 8
@efi_lock = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @efi_uninit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @efi_uninit() #0 {
  %1 = load i32*, i32** @efi_runtime, align 8
  %2 = icmp eq i32* %1, null
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %14

4:                                                ; preds = %0
  %5 = load i32*, i32** @efi_shutdown_tag, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %11

7:                                                ; preds = %4
  %8 = load i32, i32* @shutdown_final, align 4
  %9 = load i32*, i32** @efi_shutdown_tag, align 8
  %10 = call i32 @EVENTHANDLER_DEREGISTER(i32 %8, i32* %9)
  br label %11

11:                                               ; preds = %7, %4
  %12 = call i32 (...) @efi_destroy_1t1_map()
  store i32* null, i32** @efi_systbl, align 8
  store i32* null, i32** @efi_cfgtbl, align 8
  store i32* null, i32** @efi_runtime, align 8
  %13 = call i32 @mtx_destroy(i32* @efi_lock)
  br label %14

14:                                               ; preds = %11, %3
  ret void
}

declare dso_local i32 @EVENTHANDLER_DEREGISTER(i32, i32*) #1

declare dso_local i32 @efi_destroy_1t1_map(...) #1

declare dso_local i32 @mtx_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
